--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 								<h1 class="cd-headline clip">
 									<span class="fw_600">I Am</span>
 									<span class="cd-words-wrapper">
-										<b class="is-visible fw_600">Anjali Mirza</b>
-										<b class="fw_600">Web Designer</b>
-										<b class="fw_600">Web Developer</b>
-										<b class="fw_600">Photographer</b>
+										<b class="is-visible fw_600">Doremxn</b>
+										<b class="fw_600">Discord Bot & Developer</b>
+										<b class="fw_600">Discord Bot & Developer</b>
+										<b class="fw_600">Discord Bot & Developer</b>
 									</span>
 								</h1>
 								<p>I'm a Web Developer with extensive experience for over 5 years. My expertise is to create and Websites design, graphic design and many more...</p>
